killed some mutants left
Signed-off-by: Davide Basile <davide.basile@isti.cnr.it>